[project]
name = "spark-rag-maintenance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "llama-index>=0.14.15",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-llms-anthropic>=0.10.10",
    "llama-index-readers-file>=0.5.6",
    "pandas>=2.3.3",
    "pyarrow>=23.0.1",
    "pyspark>=4.1.1",
    "scikit-learn>=1.8.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]
